--- a/IsaacLamb/View/Base.lproj/Main.storyboard
+++ b/IsaacLamb/View/Base.lproj/Main.storyboard
@@ -79,8 +79,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="250" height="300"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAq-Qc-V2D">
-                                            <rect key="frame" x="0.0" y="273" width="250" height="27"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cAq-Qc-V2D">
+                                            <rect key="frame" x="0.0" y="253" width="250" height="47"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <attributedString key="attributedText">
                                                 <fragment content="Label">
                                                     <attributes>
@@ -91,17 +92,19 @@
                                             </attributedString>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Kc-r2-2go">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Kc-r2-2go">
                                             <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
+                                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YNv-BI-8SO">
+                                            <rect key="frame" x="0.0" y="253" width="250" height="47"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <connections>
+                                                <segue destination="uCn-1T-dkr" kind="show" id="GYU-D0-ffa"/>
+                                            </connections>
+                                        </button>
                                     </subviews>
                                 </view>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="cAq-Qc-V2D" secondAttribute="trailing" id="KI5-0w-nPo"/>
-                                    <constraint firstItem="cAq-Qc-V2D" firstAttribute="leading" secondItem="FyZ-AH-Yhb" secondAttribute="leading" id="OFp-kJ-lPJ"/>
-                                    <constraint firstAttribute="bottom" secondItem="cAq-Qc-V2D" secondAttribute="bottom" id="QmP-pq-pj4"/>
-                                    <constraint firstItem="cAq-Qc-V2D" firstAttribute="top" secondItem="8Kc-r2-2go" secondAttribute="bottom" id="p9x-c9-L1b"/>
-                                </constraints>
                                 <connections>
                                     <outlet property="imageName" destination="cAq-Qc-V2D" id="mzs-gG-pyp"/>
                                     <outlet property="imageView" destination="8Kc-r2-2go" id="OZz-dS-yQe"/>
@@ -116,7 +119,7 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="heH-w2-y9P" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="774" y="-584"/>
+            <point key="canvasLocation" x="773.60000000000002" y="-584.25787106446785"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="epj-BO-JNt">
@@ -367,10 +370,10 @@
             </objects>
             <point key="canvasLocation" x="2668" y="116"/>
         </scene>
-        <!--Programming Controller-->
+        <!--View Controller-->
         <scene sceneID="FnH-Zt-scC">
             <objects>
-                <viewController restorationIdentifier="SixthVC" storyboardIdentifier="SixthVC" id="ehg-3k-DUN" customClass="ProgrammingController" customModule="IsaacLamb" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="SixthVC" storyboardIdentifier="SixthVC" id="ehg-3k-DUN" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qxS-HS-n1m">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -401,19 +404,26 @@
                                     <accessibilityTraits key="traits" button="YES" image="YES"/>
                                 </accessibility>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IfV-e5-kz2">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1U2-jw-njs">
                                 <rect key="frame" x="16" y="366" width="343" height="236"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <attributedString key="attributedText">
-                                    <fragment content="Label">
-                                        <attributes>
-                                            <font key="NSFont" size="17" name="Times-Bold"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Button">
+                                    <attributedString key="attributedTitle">
+                                        <fragment content="Programming">
+                                            <attributes>
+                                                <color key="NSBackgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
+                                                <color key="NSColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <font key="NSFont" size="50" name="Times-Bold"/>
+                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                            </attributes>
+                                        </fragment>
+                                    </attributedString>
+                                </state>
+                                <connections>
+                                    <segue destination="c9P-gZ-Ljo" kind="show" id="mtP-xo-LSN"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="ozg-t4-uIs"/>
@@ -1551,7 +1561,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kg1-M0-5dd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4717.6000000000004" y="-545.57721139430294"/>
+            <point key="canvasLocation" x="4718" y="-651"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="yMs-Jx-JoV">
@@ -1566,7 +1576,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Cjr-m3-R6r" id="bPJ-CS-dYZ">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
@@ -1583,13 +1593,14 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2ET-fx-EDy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5540" y="-980"/>
+            <point key="canvasLocation" x="5557" y="-1031"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="jpP-0m-ajZ">
             <objects>
                 <navigationController id="3L6-vB-wVy" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kev-ue-7QU">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -1598,7 +1609,22 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K6q-YJ-BIO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4718" y="-1284"/>
+            <point key="canvasLocation" x="4718" y="-1452"/>
+        </scene>
+        <!--Programming Controller-->
+        <scene sceneID="NAc-ZQ-F6X">
+            <objects>
+                <viewController id="c9P-gZ-Ljo" customClass="ProgrammingController" customModule="IsaacLamb" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0r4-3B-FJT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="Qf7-Ft-yF6"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZIz-In-d3j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3302" y="-584"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="yAx-t1-cYJ">
@@ -1611,7 +1637,7 @@
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E8X-Sd-Huy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3934" y="-980"/>
+            <point key="canvasLocation" x="3934" y="-1032"/>
         </scene>
     </scenes>
     <resources>
@@ -1626,7 +1652,7 @@
         <image name="javaSample" width="1126" height="754"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="AFw-dK-xmp"/>
-        <segue reference="pqu-NG-pzk"/>
+        <segue reference="y1J-dZ-7Ja"/>
+        <segue reference="GYU-D0-ffa"/>
     </inferredMetricsTieBreakers>
 </document>
