--- a/IsaacLamb/View/Base.lproj/Main.storyboard
+++ b/IsaacLamb/View/Base.lproj/Main.storyboard
@@ -1615,7 +1615,7 @@
         <scene sceneID="NAc-ZQ-F6X">
             <objects>
                 <viewController id="c9P-gZ-Ljo" customClass="ProgrammingController" customModule="IsaacLamb" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="0r4-3B-FJT">
+                    <view key="view" contentMode="scaleToFill" id="0r4-3B-FJT" customClass="SKView">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
